package com.example.lab4_mkv.model;

public interface Aggregate {
    public IIterator getIterator();
}
