package com.example.lab4_mkv.model;

public interface IIterator {
    public boolean hasNext(int x);
    public Object next();
    public Object preview();
}
