@startuml

title __LAB4_MKV's Class Diagram__\n


    namespace om.example.lab4_mkv {
      class com.example.lab4_mkv.HelloApplication {
      }
    }

  

    namespace om.example.lab4_mkv {
      class com.example.lab4_mkv.HelloController {
      }
      }

  


      namespace model {
        interface com.example.lab4_mkv.model.Aggregate {
        }
      }

  


      namespace model {
        interface com.example.lab4_mkv.model.IIterator {
        }
      }

  


      namespace model {
        class com.example.lab4_mkv.model.ImageCollection {
        }
      }

  

  com.example.lab4_mkv.HelloApplication -up-|> javafx.application.Application
  com.example.lab4_mkv.HelloController .up.|> javafx.fxml.Initializable
  com.example.lab4_mkv.HelloController o-- com.example.lab4_mkv.model.ImageCollection : imgs
  com.example.lab4_mkv.HelloController o-- com.example.lab4_mkv.model.IIterator : iter_main
  com.example.lab4_mkv.model.ImageCollection .up.|> com.example.lab4_mkv.model.Aggregate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
